--- a/src/scss/pages/_writing.scss
+++ b/src/scss/pages/_writing.scss
@@ -1,11 +1,53 @@
-@use "../abstract/variables" as *;
-@use "../abstract/mixins" as *;
+@use '../abstract/variables' as *;
+@use '../abstract/mixins' as *;
 
 .writing-section {
   margin-block-end: 4rem;
   scroll-margin-block-start: 4rem;
   padding-block-end: 4rem;
   border-block-end: 2px solid #dadada;
+  &--card {
+    position: relative;
+    overflow: hidden;
+    margin-inline: 1rem;
+    padding-top: 2rem;
+    border: none;
+
+    &:before {
+      position: absolute;
+      z-index: 1;
+      inset-block: 0;
+      right: 0;
+      width: 4rem;
+      content: '';
+      pointer-events: none;
+      background-image: linear-gradient(
+        to left,
+        #{$color-background},
+        transparent
+      );
+    }
+
+    .writing-section-header {
+      position: relative;
+      z-index: 2;
+      margin-block-end: 2rem;
+      margin-inline: -2rem;
+      padding-block-end: 1rem;
+      padding-inline: 2rem;
+      border-bottom: 0.5px dashed var(--color-border-light);
+    }
+    .writing-section-header__title {
+      font-size: 2rem;
+      small {
+        font-size: inherit;
+        color: $color-text-mid;
+      }
+    }
+    .writing-section-header__description {
+      font-size: 1rem;
+    }
+  }
   &:last-of-type {
     border: none;
   }
@@ -13,10 +55,11 @@
 
 .writing-section-header {
   margin-block-end: 3rem;
+
   @include screen(lg) {
     display: grid;
-    grid-template-columns: auto 1fr;
     column-gap: 1rem;
+    grid-template-columns: auto 1fr;
   }
   &__title {
     font-family: $font-serif-display;
@@ -27,8 +70,8 @@
 
     @include screen(sm) {
       font-size: 3rem;
-      max-width: 37.5rem;
       align-self: last baseline;
+      max-width: 37.5rem;
     }
   }
   &__description {
@@ -43,6 +86,7 @@
 }
 
 .recent-reading-list {
+  position: relative;
   display: grid;
   overflow: scroll;
   // flex-wrap: nowrap;
@@ -51,10 +95,11 @@
   align-items: start;
   width: 100vw;
   margin-left: calc(50% - 50vw);
-  padding-inline: 1rem;
+  padding-inline: 3rem;
 
   scrollbar-width: none;
   overscroll-behavior-x: none;
+
   &::-webkit-scrollbar {
     // height: 0px;
     display: none;
@@ -63,16 +108,21 @@
     display: block;
     width: 1rem;
     height: 100%;
-    content: "";
+    content: '';
   }
   &__warning {
     font-family: $font-serif;
     position: sticky;
     left: 0;
+    grid-column-end: span 3;
     color: $color-text-mid;
   }
   .card {
     grid-row: 2;
     min-width: 18rem;
+    border-width: 0.5px;
+  }
+  .card__title {
+    font-size: 1.5rem;
   }
 }
