--- a/src/scss/components/_article-header.scss
+++ b/src/scss/components/_article-header.scss
@@ -101,24 +101,11 @@
     // list-style: none;
     padding: 0;
   }
-  picture:has(.article-header__image),
-  &__canvas-wrapper {
+  &__graphic-wrapper {
+    position: relative;
+    overflow: hidden;
     border: 2px solid $color-text;
     border-radius: $bdrs;
-    overflow: hidden;
-    position: relative;
-    canvas {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      inset-inline: 0;
-    }
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center center;
-    }
 
     @include screen(sm) {
       grid-column: 1 / span 2;
@@ -134,6 +121,18 @@
     @include screen(magazine) {
       grid-column-end: span 12;
       height: 20rem;
+    }
+    canvas {
+      position: absolute;
+      inset-inline: 0;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center center;
     }
   }
   .table-of-contents {
