🗒️  - Add opengraph images for singleton pages

--- a/src/about.njk
+++ b/src/about.njk
@@ -1,10 +1,19 @@
 ---js
 {
+    tags: ['page'],
+    title: 'About',
+    
     eleventyComputed: {
         footerLinks: (data) => [
             ...data.footerLinks,
             { name: "Now", url: "/now" },
         ],
+        og: function ({page}) {
+            const {fileSlug} = page;
+            const ogTargetUrl = `https://dev.henry.codes/opengraph/${fileSlug}`;
+            const ogScreenshotUrl = `https://screenshot.henry.codes/${encodeURIComponent(ogTargetUrl)}/opengraph`;
+            return ogScreenshotUrl;
+        },
     },
 }
 ---
