--- a/src/micro.njk
+++ b/src/micro.njk
@@ -1,5 +1,15 @@
 ---js
 {
+    title: 'Micro',
+    tags: ['page'],
+    eleventyComputed: {
+        og: function ({page}) {
+            const {fileSlug} = page
+            const ogTargetUrl = `https://dev.henry.codes/opengraph/${fileSlug}`;
+            const ogScreenshotUrl = `https://screenshot.henry.codes/${encodeURIComponent(ogTargetUrl)}/opengraph`;
+            return ogScreenshotUrl;
+        },
+    },
     feedLinks: [
         {
             "name": "RSS",
