--- a/src/now.njk
+++ b/src/now.njk
@@ -1,11 +1,19 @@
 ---js
 {
-eleventyComputed: {
-footerLinks: (data) => [
-...data.footerLinks,
-{ name: "Now", url: "/now" },
-],
-},
+    title: 'Now',
+    tags: ['page'],
+    eleventyComputed: {
+        footerLinks: (data) => [
+            ...data.footerLinks,
+            { name: "Now", url: "/now" },
+        ],
+        og: function ({page}) {
+            const {fileSlug} = page
+            const ogTargetUrl = `https://dev.henry.codes/opengraph/${fileSlug}`;
+            const ogScreenshotUrl = `https://screenshot.henry.codes/${encodeURIComponent(ogTargetUrl)}/opengraph`;
+            return ogScreenshotUrl;
+        },
+    },
 }
 ---
 {# {% renderTemplate "webc" %}
