--- a/src/scss/og.scss
+++ b/src/scss/og.scss
@@ -45,6 +45,12 @@ body {
   &--centered {
     margin-inline: auto;
   }
+  &--bottom {
+    align-self: end;
+  }
+  &--wide {
+    max-width: calc(100vw - 4rem);
+  }
 }
 .logo {
   max-width: 64px;
@@ -55,6 +61,15 @@ body {
   position: fixed;
   top: 32px;
   left: calc(2rem + 24px);
+}
+.header {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  max-width: 520px;
+  p {
+    margin: 0;
+  }
 }
 
 .intro {
@@ -77,6 +92,18 @@ h1 {
   line-height: 1;
   margin: 0;
   text-wrap: balance;
+}
+.page-title {
+  font-size: 240px;
+  line-height: 0.8;
+  font-family: $font-display;
+  text-transform: uppercase;
+}
+.row {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  align-items: last baseline;
+  column-gap: 2rem;
 }
 .case-title {
   font-size: 136px;
@@ -127,4 +154,15 @@ h1 {
   position: fixed;
   right: 2rem;
   bottom: 2rem;
+}
+
+.barb-bar {
+  width: 100%;
+  height: 180px;
+  border: 2px solid #787878aa;
+  border-radius: $bdrs;
+  background-image: url('/img/thorns-rotated-on-black.png');
+  background-repeat: repeat-x;
+  background-position-y: 50%;
+  background-size: 110px;
 }
