--- a/src/writing.njk
+++ b/src/writing.njk
@@ -3,11 +3,18 @@
     title: 'Writing',
     backLink: '/',
     backLinkText: 'Go home',
+    tags: ['page'],
     eleventyComputed: {
         footerLinks: (data) => [
             ...data.footerLinks,
             { name: "Writing", url: "/writing" },
         ],
+        og: function ({page}) {
+            const {fileSlug} = page
+            const ogTargetUrl = `https://dev.henry.codes/opengraph/${fileSlug}`;
+            const ogScreenshotUrl = `https://screenshot.henry.codes/${encodeURIComponent(ogTargetUrl)}/opengraph`;
+            return ogScreenshotUrl;
+        },
     },
     toc: [
         {
