🚀 - Better click behavior for blocks, cleanup for spotify widget spacing, more gradient underline spacing fixes, timing for waterfall and nav, improved og default

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -42,7 +42,7 @@
         <meta property="og:image" content="{{ og }}">
     {% else %}
     {# TODO dev.henry.codes #}
-        <meta property="og:image" content="https://dev.henry.codes/img/og-default.png">
+        <meta property="og:image" content="https://dev.henry.codes/img/og/og-default.png">
     {%- endif -%}
 
     <!-- Indieweb -->
