--- a/src/now.njk
+++ b/src/now.njk
@@ -24,8 +24,8 @@
                 href="https://nownownow.com/about">nownownow.com/about</a>.)</p>
     </div>
 </header>
-<div class="container rendered">
-    <article class="article-content">
+<div class="container">
+    <article class="article-content rendered">
         <h2>Professional Focus</h2>
         <p>I’ve really enjoyed taking the Summer off after my role was eliminated by YouTube last Spring, shaking loose
             some of the scale and rust of Big Tech Burnout, but I can feel the fires of ambition and drive lighting
