--- a/src/scss/components/_spotify-widget.scss
+++ b/src/scss/components/_spotify-widget.scss
@@ -1,5 +1,7 @@
 .spotify-widget {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  column-gap: 0.5ch;
   &__inner {
     display: inline-block;
   }
@@ -10,7 +12,7 @@
     max-width: #{0.75rem + 0.5rem};
     width: 100%;
     display: inline-block;
-    padding: 0.5rem;
-    margin: -0.5rem;
+    // padding: 0.5rem;
+    // margin: -0.5rem;
   }
 }
