--- a/src/work.njk
+++ b/src/work.njk
@@ -30,7 +30,7 @@
         <span class="list-design-element"></span>
         <span class="list-design-element"></span>
         <span class="list-design-element"></span>
-        <span class="list-design-element"></span>
+        <span class="list-design-element"><img eleventy:ignore alt="" src="/img/barbed-motif.png" /></span>
         <span class="list-design-element"></span>
         <span class="list-design-element"></span>
         <span class="list-design-element"></span>
