🔠 - Install officially-licensed Louize

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -58,12 +58,12 @@
 
     {% if page.url === '/' %}
         <link rel="preload" href="/fonts/manuka-black.woff2" as="font" type="font/woff2" crossorigin />
-        <link rel="preload" href="/fonts/subset-LouizeDisplaytrial.woff2" as="font" type="font/woff2" crossorigin />
-        <link rel="preload" href="/fonts/subset-LouizeDisplaytrial-Italic.woff2" as="font" type="font/woff2" crossorigin />
+        <link rel="preload" href="/fonts/subset-LouizeDisplay.woff2" as="font" type="font/woff2" crossorigin />
+        <link rel="preload" href="/fonts/subset-LouizeDisplay-Italic.woff2" as="font" type="font/woff2" crossorigin />
         <link rel="preload" href="/fonts/PPNeueMontreal-Book.woff2" as="font" type="font/woff2"
         crossorigin />
     {% else %}
-        <link rel="preload" href="/fonts/subset-Louizetrial.woff2" as="font" type="font/woff2" crossorigin />
+        <link rel="preload" href="/fonts/subset-Louize.woff2" as="font" type="font/woff2" crossorigin />
     {% endif %}
 
     <link rel="stylesheet" href="/css/fonts.css">
